# implicit_sharing

./: CMakeLists.txt  README.md  install.sh
.conan/: conanfile.py
.devcontainer/: devcontainer.json  docker-compose.yml
app/: main.cpp
app/include/: example.hpp  implicit_sharing.hpp
app/src/: example.cpp
app/test/: CMakeLists.txt  main.cpp  test_example.cpp
